// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformPicker render() should only render Mobile platforms under Mobile tab 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
          value=""
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="popular"
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="browser"
      onClick={[Function]}
      to=""
    >
      Browser
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="server"
      onClick={[Function]}
      to=""
    >
      Server
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="mobile"
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="desktop"
      onClick={[Function]}
      to=""
    >
      Desktop
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="all"
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <ul
    className="client-platform-list platform-tiles"
  >
    <PlatformCard
      className=""
      key="cordova"
      onClick={[Function]}
      platform="cordova"
    />
    <PlatformCard
      className=""
      key="java-android"
      onClick={[Function]}
      platform="java-android"
    />
    <PlatformCard
      className=""
      key="objc"
      onClick={[Function]}
      platform="objc"
    />
    <PlatformCard
      className=""
      key="cocoa"
      onClick={[Function]}
      platform="cocoa"
    />
    <PlatformCard
      className=""
      key="swift"
      onClick={[Function]}
      platform="swift"
    />
  </ul>
</div>
`;

exports[`PlatformPicker render() should render renderPlatformList with Python when filtered with py 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
          value="py"
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="popular"
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="browser"
      onClick={[Function]}
      to=""
    >
      Browser
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="server"
      onClick={[Function]}
      to=""
    >
      Server
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="mobile"
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="desktop"
      onClick={[Function]}
      to=""
    >
      Desktop
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="all"
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <ul
    className="client-platform-list platform-tiles"
  >
    <PlatformCard
      className=""
      key="python-bottle"
      onClick={[Function]}
      platform="python-bottle"
    />
    <PlatformCard
      className=""
      key="python-celery"
      onClick={[Function]}
      platform="python-celery"
    />
    <PlatformCard
      className=""
      key="python-django"
      onClick={[Function]}
      platform="python-django"
    />
    <PlatformCard
      className=""
      key="python-flask"
      onClick={[Function]}
      platform="python-flask"
    />
    <PlatformCard
      className=""
      key="python-pylons"
      onClick={[Function]}
      platform="python-pylons"
    />
    <PlatformCard
      className=""
      key="python-pyramid"
      onClick={[Function]}
      platform="python-pyramid"
    />
    <PlatformCard
      className=""
      key="python"
      onClick={[Function]}
      platform="python"
    />
    <PlatformCard
      className=""
      key="python-rq"
      onClick={[Function]}
      platform="python-rq"
    />
    <PlatformCard
      className=""
      key="python-tornado"
      onClick={[Function]}
      platform="python-tornado"
    />
  </ul>
</div>
`;

exports[`PlatformPicker render() should render renderPlatformList with community SDKs message if platform not found 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
          value="aaaaaa"
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="popular"
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="browser"
      onClick={[Function]}
      to=""
    >
      Browser
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="server"
      onClick={[Function]}
      to=""
    >
      Server
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="mobile"
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="desktop"
      onClick={[Function]}
      to=""
    >
      Desktop
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      key="all"
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <p>
    Not finding your platform? There's a rich ecosystem of community supported SDKs as well (including Perl, CFML, Clojure, and ActionScript).
 Try searching for Sentry clients or contacting support.
  </p>
</div>
`;

exports[`PlatformPicker render() should update State.tab onClick when particular tab is clicked 1`] = `
<PlatformPicker
  location={
    Object {
      "query": Object {},
    }
  }
  platform=""
  setPlatform={[Function]}
  showOther={true}
>
  <div
    className="platform-picker"
  >
    <ul
      className="nav nav-tabs"
    >
      <li
        style={
          Object {
            "float": "right",
            "marginRight": 0,
          }
        }
      >
        <div
          className="platform-filter-container"
        >
          <span
            className="icon icon-search"
          />
          <input
            className="platform-filter"
            label="Filter"
            onChange={[Function]}
            placeholder="Filter"
            type="text"
            value=""
          />
        </div>
      </li>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="popular"
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Popular
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="browser"
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Browser
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="server"
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Server
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="mobile"
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Mobile
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="desktop"
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Desktop
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        key="all"
        onClick={[Function]}
        to=""
      >
        <li
          className="active"
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              All
            </a>
          </Link>
        </li>
      </ListLink>
    </ul>
    <ul
      className="client-platform-list platform-tiles"
    >
      <PlatformCard
        className=""
        key="csharp"
        onClick={[Function]}
        platform="csharp"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="csharp"
          >
            <li
              className="platform-tile list-unstyled csharp csharp "
            >
              <span
                className="platformicon platformicon-csharp"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            C#
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="cordova"
        onClick={[Function]}
        platform="cordova"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="cordova"
          >
            <li
              className="platform-tile list-unstyled cordova cordova "
            >
              <span
                className="platformicon platformicon-cordova"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Cordova
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="electron"
        onClick={[Function]}
        platform="electron"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="electron"
          >
            <li
              className="platform-tile list-unstyled electron electron "
            >
              <span
                className="platformicon platformicon-electron"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Electron
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="elixir"
        onClick={[Function]}
        platform="elixir"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="elixir"
          >
            <li
              className="platform-tile list-unstyled elixir elixir "
            >
              <span
                className="platformicon platformicon-elixir"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Elixir
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="go"
        onClick={[Function]}
        platform="go"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="go"
          >
            <li
              className="platform-tile list-unstyled go go "
            >
              <span
                className="platformicon platformicon-go"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Go
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="go-http"
        onClick={[Function]}
        platform="go-http"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="go-http"
          >
            <li
              className="platform-tile list-unstyled go-http go "
            >
              <span
                className="platformicon platformicon-go-http"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            net/http
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="java-android"
        onClick={[Function]}
        platform="java-android"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-android"
          >
            <li
              className="platform-tile list-unstyled java-android java "
            >
              <span
                className="platformicon platformicon-java-android"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Android
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="java-appengine"
        onClick={[Function]}
        platform="java-appengine"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-appengine"
          >
            <li
              className="platform-tile list-unstyled java-appengine java "
            >
              <span
                className="platformicon platformicon-java-appengine"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Google App Engine
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="java"
        onClick={[Function]}
        platform="java"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java"
          >
            <li
              className="platform-tile list-unstyled java java "
            >
              <span
                className="platformicon platformicon-java"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Java
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="java-log4j"
        onClick={[Function]}
        platform="java-log4j"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-log4j"
          >
            <li
              className="platform-tile list-unstyled java-log4j java "
            >
              <span
                className="platformicon platformicon-java-log4j"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Log4j 1.x
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="java-log4j2"
        onClick={[Function]}
        platform="java-log4j2"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-log4j2"
          >
            <li
              className="platform-tile list-unstyled java-log4j2 java "
            >
              <span
                className="platformicon platformicon-java-log4j2"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Log4j 2.x
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="java-logback"
        onClick={[Function]}
        platform="java-logback"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-logback"
          >
            <li
              className="platform-tile list-unstyled java-logback java "
            >
              <span
                className="platformicon platformicon-java-logback"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Logback
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="java-logging"
        onClick={[Function]}
        platform="java-logging"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-logging"
          >
            <li
              className="platform-tile list-unstyled java-logging java "
            >
              <span
                className="platformicon platformicon-java-logging"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            java.util.logging
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="javascript-angular"
        onClick={[Function]}
        platform="javascript-angular"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-angular"
          >
            <li
              className="platform-tile list-unstyled javascript-angular javascript "
            >
              <span
                className="platformicon platformicon-javascript-angular"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Angular
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="javascript-angularjs"
        onClick={[Function]}
        platform="javascript-angularjs"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-angularjs"
          >
            <li
              className="platform-tile list-unstyled javascript-angularjs javascript "
            >
              <span
                className="platformicon platformicon-javascript-angularjs"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            AngularJS
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="javascript-backbone"
        onClick={[Function]}
        platform="javascript-backbone"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-backbone"
          >
            <li
              className="platform-tile list-unstyled javascript-backbone javascript "
            >
              <span
                className="platformicon platformicon-javascript-backbone"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Backbone
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="javascript-ember"
        onClick={[Function]}
        platform="javascript-ember"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-ember"
          >
            <li
              className="platform-tile list-unstyled javascript-ember javascript "
            >
              <span
                className="platformicon platformicon-javascript-ember"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Ember
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="javascript"
        onClick={[Function]}
        platform="javascript"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript"
          >
            <li
              className="platform-tile list-unstyled javascript javascript "
            >
              <span
                className="platformicon platformicon-javascript"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            JavaScript
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="javascript-react"
        onClick={[Function]}
        platform="javascript-react"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-react"
          >
            <li
              className="platform-tile list-unstyled javascript-react javascript "
            >
              <span
                className="platformicon platformicon-javascript-react"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            React
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="javascript-vue"
        onClick={[Function]}
        platform="javascript-vue"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-vue"
          >
            <li
              className="platform-tile list-unstyled javascript-vue javascript "
            >
              <span
                className="platformicon platformicon-javascript-vue"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Vue
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="minidump"
        onClick={[Function]}
        platform="minidump"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="minidump"
          >
            <li
              className="platform-tile list-unstyled minidump minidump "
            >
              <span
                className="platformicon platformicon-minidump"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Minidump
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="node-connect"
        onClick={[Function]}
        platform="node-connect"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node-connect"
          >
            <li
              className="platform-tile list-unstyled node-connect node "
            >
              <span
                className="platformicon platformicon-node-connect"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Connect
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="node-express"
        onClick={[Function]}
        platform="node-express"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node-express"
          >
            <li
              className="platform-tile list-unstyled node-express node "
            >
              <span
                className="platformicon platformicon-node-express"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Express
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="node-koa"
        onClick={[Function]}
        platform="node-koa"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node-koa"
          >
            <li
              className="platform-tile list-unstyled node-koa node "
            >
              <span
                className="platformicon platformicon-node-koa"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Koa
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="node"
        onClick={[Function]}
        platform="node"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node"
          >
            <li
              className="platform-tile list-unstyled node node "
            >
              <span
                className="platformicon platformicon-node"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Node.js
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="objc"
        onClick={[Function]}
        platform="objc"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="objc"
          >
            <li
              className="platform-tile list-unstyled objc objc "
            >
              <span
                className="platformicon platformicon-objc"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Objective-C
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="php-laravel"
        onClick={[Function]}
        platform="php-laravel"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-laravel"
          >
            <li
              className="platform-tile list-unstyled php-laravel php "
            >
              <span
                className="platformicon platformicon-php-laravel"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Laravel
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="php-monolog"
        onClick={[Function]}
        platform="php-monolog"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-monolog"
          >
            <li
              className="platform-tile list-unstyled php-monolog php "
            >
              <span
                className="platformicon platformicon-php-monolog"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Monolog
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="php"
        onClick={[Function]}
        platform="php"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php"
          >
            <li
              className="platform-tile list-unstyled php php "
            >
              <span
                className="platformicon platformicon-php"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            PHP
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="php-symfony2"
        onClick={[Function]}
        platform="php-symfony2"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-symfony2"
          >
            <li
              className="platform-tile list-unstyled php-symfony2 php "
            >
              <span
                className="platformicon platformicon-php-symfony2"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Symfony2
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-bottle"
        onClick={[Function]}
        platform="python-bottle"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-bottle"
          >
            <li
              className="platform-tile list-unstyled python-bottle python "
            >
              <span
                className="platformicon platformicon-python-bottle"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Bottle
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-celery"
        onClick={[Function]}
        platform="python-celery"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-celery"
          >
            <li
              className="platform-tile list-unstyled python-celery python "
            >
              <span
                className="platformicon platformicon-python-celery"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Celery
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-django"
        onClick={[Function]}
        platform="python-django"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-django"
          >
            <li
              className="platform-tile list-unstyled python-django python "
            >
              <span
                className="platformicon platformicon-python-django"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Django
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-flask"
        onClick={[Function]}
        platform="python-flask"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-flask"
          >
            <li
              className="platform-tile list-unstyled python-flask python "
            >
              <span
                className="platformicon platformicon-python-flask"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Flask
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-pylons"
        onClick={[Function]}
        platform="python-pylons"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-pylons"
          >
            <li
              className="platform-tile list-unstyled python-pylons python "
            >
              <span
                className="platformicon platformicon-python-pylons"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Pylons
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-pyramid"
        onClick={[Function]}
        platform="python-pyramid"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-pyramid"
          >
            <li
              className="platform-tile list-unstyled python-pyramid python "
            >
              <span
                className="platformicon platformicon-python-pyramid"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Pyramid
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python"
        onClick={[Function]}
        platform="python"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python"
          >
            <li
              className="platform-tile list-unstyled python python "
            >
              <span
                className="platformicon platformicon-python"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Python
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-rq"
        onClick={[Function]}
        platform="python-rq"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-rq"
          >
            <li
              className="platform-tile list-unstyled python-rq python "
            >
              <span
                className="platformicon platformicon-python-rq"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            RQ
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="python-tornado"
        onClick={[Function]}
        platform="python-tornado"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-tornado"
          >
            <li
              className="platform-tile list-unstyled python-tornado python "
            >
              <span
                className="platformicon platformicon-python-tornado"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Tornado
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="cocoa"
        onClick={[Function]}
        platform="cocoa"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="cocoa"
          >
            <li
              className="platform-tile list-unstyled cocoa cocoa "
            >
              <span
                className="platformicon platformicon-cocoa"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            React-Native
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="ruby-rack"
        onClick={[Function]}
        platform="ruby-rack"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="ruby-rack"
          >
            <li
              className="platform-tile list-unstyled ruby-rack ruby "
            >
              <span
                className="platformicon platformicon-ruby-rack"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Rack
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="ruby-rails"
        onClick={[Function]}
        platform="ruby-rails"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="ruby-rails"
          >
            <li
              className="platform-tile list-unstyled ruby-rails ruby "
            >
              <span
                className="platformicon platformicon-ruby-rails"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Rails
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="ruby"
        onClick={[Function]}
        platform="ruby"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="ruby"
          >
            <li
              className="platform-tile list-unstyled ruby ruby "
            >
              <span
                className="platformicon platformicon-ruby"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Ruby
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="rust"
        onClick={[Function]}
        platform="rust"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="rust"
          >
            <li
              className="platform-tile list-unstyled rust rust "
            >
              <span
                className="platformicon platformicon-rust"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Rust
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="swift"
        onClick={[Function]}
        platform="swift"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="swift"
          >
            <li
              className="platform-tile list-unstyled swift swift "
            >
              <span
                className="platformicon platformicon-swift"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Swift
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="mock"
        onClick={[Function]}
        platform="mock"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="mock"
          >
            <li
              className="platform-tile list-unstyled mock mock "
            >
              <span
                className="platformicon platformicon-mock"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Mock Integration
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        key="other"
        onClick={[Function]}
        platform="other"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="other"
          >
            <li
              className="platform-tile list-unstyled other other "
            >
              <span
                className="platformicon platformicon-other"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Other
             
          </h5>
        </span>
      </PlatformCard>
    </ul>
  </div>
</PlatformPicker>
`;
